# writeupforge

./: CHANGELOG.md  README.md  RELEASE_GUIDE.md  RELEASE_SUMMARY.md  SETUP_GUIDE.md  ai_handler.py  cli.py  input_handler.py  install-linux.sh  install.py  main.py  main_gui.py  pdf_generator.py  pyproject.toml  requirements.txt  run.py  setup.py  spinner.py  version.py  writeup_types.py  writeupforge.desktop
scripts/: install-linux.sh  uninstall.bat
